objects/copado__User_Story__c.object
<CustomObject>
    <description>Agile form of requirements gathering</description>
    <fields>
        <fullName>SCA_Score__c</fullName>
        <description>This field is updated by a process that pastes the most recent SCA results.</description>
        <label>SCA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCA_Violations__c</fullName>
        <description>This field is updated by a process that pastes the most recent SCA results.</description>
        <label>SCA Violations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria_Status__c</fullName>
        <label>Acceptance Criteria Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Apex_Code_Coverage__c</fullName>
        <description>Coverage of the Apex Classes added or committed within the User Story.</description>
        <inlineHelpText>Coverage of the Apex Classes added or committed within the User Story.</inlineHelpText>
        <label>Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Apex_Tests_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Tests Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Backburner_Rank__c</fullName>
        <label>Backburner Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Backlog_Rank__c</fullName>
        <description>Position of the User Story within the Backlog. Usually User Stories at the top of the Backlog are more relevant than User Stories at the bottom.</description>
        <inlineHelpText>Position of the User Story within the Backlog. Usually User Stories at the top of the Backlog are more relevant than User Stories at the bottom.</inlineHelpText>
        <label>Backlog Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Base_Branch__c</fullName>
        <description>Git branch which the feature branch is created from. This value is updated when committing in the user story and by default, it will be the main branch of the Deployment Flow or the base branch of the Release linked to the user story.</description>
        <inlineHelpText>Git branch which the feature branch is created from. This value is updated when committing in the user story and by default, it will be the main branch of the Deployment Flow or the base branch of the Release linked to the user story.e user story.</inlineHelpText>
        <label>Base Branch</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories_BA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Cancellation_Reason__c</fullName>
        <description>Describes why the User Story was cancelled, so that this information is available.</description>
        <inlineHelpText>Describes why the User Story was cancelled, so that this information is available.</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Classes_Without_Coverage__c</fullName>
        <description>Number of classes without the minimum required coverage.</description>
        <inlineHelpText>Number of classes without the minimum required coverage.</inlineHelpText>
        <label>Classes Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Criteria__c</fullName>
        <label>Compliance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <description>Current status of the User Story Compliance scan.</description>
        <inlineHelpText>Current status of the User Story Compliance scan.</inlineHelpText>
        <label>Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed - Findings detected</fullName>
                </value>
                <value>
                    <fullName>Completed - No Findings</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed - Resolved</fullName>
                </value>
                <value>
                    <fullName>Under Investigation</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Data_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Developer)</relationshipLabel>
        <relationshipName>User_Stories_developer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Documentation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment_Type__c</fullName>
        <formula>TEXT(copado__Environment__r.copado__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current environment of the User Story. This value is added automatically by Copado based on the selected Org Credential.</description>
        <inlineHelpText>Current environment of the User Story. This value is added automatically by Copado based on the selected Org Credential.</inlineHelpText>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Epic containing the User Story.</description>
        <inlineHelpText>Epic containing the User Story.</inlineHelpText>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_CBM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this user story will not be included in the count of user stories ahead and behind.</description>
        <inlineHelpText>If checked, this user story will not be included in the count of user stories ahead and behind.</inlineHelpText>
        <label>Exclude From CBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Failing_Methods__c</fullName>
        <description>Number of Apex Class methods that failed during the Apex Test Run execution.</description>
        <inlineHelpText>Number of Apex Class methods that failed during the Apex Test Run execution.</inlineHelpText>
        <label>Failing Methods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Functional_Specifications__c</fullName>
        <label>Functional Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Git_Merge_Status__c</fullName>
        <description>The git merge status of the latest pull request between the feature branch and the target branch. This value is provided by the Git Repository. If there is no value, the Git Repository did not provide one.</description>
        <inlineHelpText>The git merge status of the latest pull request between the feature branch and the target branch. This value is provided by the Git Repository. If there is no value, the Git Repository did not provide one.</inlineHelpText>
        <label>Git Merge Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mergeable</fullName>
                </value>
                <value>
                    <fullName>Conflicts Detected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Has_Apex_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value automatically updated by Copado whenever there are Apex Classes added or committed in the User Story.</description>
        <inlineHelpText>Value automatically updated by Copado whenever there are Apex Classes added or committed in the User Story.</inlineHelpText>
        <label>Has Apex Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <description>Latest Compliance Scan execution date.</description>
        <inlineHelpText>Latest Compliance Scan execution date.</inlineHelpText>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Promotion_Date__c</fullName>
        <label>Last Promotion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Deployment_Status__c</fullName>
        <description>Status of the latest validation Deployment for the User Story.</description>
        <formula>IF(copado__Last_Validation_Deployment__r.copado__Date__c &lt; copado__Latest_Commit_Date__c,
			 IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;OutDated&apos;)+&quot; &quot;+&quot;Validation Outdated&quot;, 
				IF(AND(NOT(ISBLANK(copado__Last_Validation_Deployment__c)),
											CONTAINS(TEXT(copado__Last_Validation_Deployment__r.copado__Status__c),&apos;Error&apos;)),
							IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;failed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Deployment__r.copado__Status__c),
							IF(AND(NOT(ISBLANK(copado__Last_Validation_Deployment__c)),
											CONTAINS(TEXT(copado__Last_Validation_Deployment__r.copado__Status__c),&apos;Successfully&apos;)),
										IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;completed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Deployment__r.copado__Status__c),
										TEXT(copado__Last_Validation_Deployment__r.copado__Status__c)
									)
		    )
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the latest validation Deployment for the User Story.</inlineHelpText>
        <label>Last Validation Deployment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Most recent validation Deployment for the User Story.</description>
        <inlineHelpText>Most recent validation Deployment for the User Story.</inlineHelpText>
        <label>Last Validation Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Promotion containing the most recent validation Deployment.</description>
        <inlineHelpText>Promotion containing the most recent validation Deployment.</inlineHelpText>
        <label>Last Validation Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Latest_Commit_Date__c</fullName>
        <label>Latest Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Manual_Step_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If any of the Quality Gates are Manual Steps (Pull Request, Manual Test, or Manual Approval), the story should be marked as &apos;Manual Step Required&apos;.</description>
        <label>Manual Step Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Manual_Tests_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Tests Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types_in_Selection__c</fullName>
        <description>Metadata types of the components listed in the User Story Selections. This value is updated automatically by Copado.</description>
        <inlineHelpText>Metadata types of the components listed in the User Story Selections. This value is updated automatically by Copado.</inlineHelpText>
        <label>Metadata Types in Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>ChannelLayout</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
                <value>
                    <fullName>CorsWhitelistOrigin</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomMetadata</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomObjectTranslation</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Minimum_Apex_Code_Coverage__c</fullName>
        <defaultValue>0.75</defaultValue>
        <description>Minimum Apex Code Coverage required. If this value is lower than the value set in the User Story&apos;s Environment, the Environment&apos;s value will be automatically applied.</description>
        <inlineHelpText>Minimum Apex Code Coverage required. If this value is lower than the value set in the User Story&apos;s Environment, the Environment&apos;s value will be automatically applied.</inlineHelpText>
        <label>Minimum Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Org Credential used to add or commit metadata and to promote and deploy the User Story to the next Environment.</description>
        <inlineHelpText>Org Credential used to add or commit metadata and to promote and deploy the User Story to the next Environment.</inlineHelpText>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>User Stories (Org Credential)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Epic_Title__c</fullName>
        <formula>copado__Epic__r.copado__Epic_Title__c</formula>
        <label>Parent Epic Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <description>Numeric value to determine which User Stories are more urgent and should be completed first.</description>
        <inlineHelpText>Numeric value to determine which User Stories are more urgent and should be completed first.</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Progress_Status__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Completed&quot;, 15, (copado__Progress__c*100) * 2) &amp;
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;white&quot;, 15,
200 - ((copado__Progress__c*100)* 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Progress__c</fullName>
        <label>Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project where the User Story belongs.</description>
        <inlineHelpText>Project where the User Story belongs.</inlineHelpText>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Promote_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story is marked as ready to be promoted. The user story will appear as &apos;Ahead&apos; and available to be selected in the Branch Management and Promotion pages.</description>
        <inlineHelpText>If checked, the User Story is marked as ready to be promoted. The user story will appear as &apos;Ahead&apos; and available to be selected in the Promotion and Branch Management pages.</inlineHelpText>
        <label>Ready to Promote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promote_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is checked, a promotion and deployment of this User Story will be started.</inlineHelpText>
        <label>Promote and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promote_as_Single_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote as Single Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promotion_Test_Level__c</fullName>
        <description>Test Level to apply in the deployment of the User Story.</description>
        <inlineHelpText>Test Level to apply in the deployment of the User Story.</inlineHelpText>
        <label>Promotion Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NoTestRun</fullName>
                    <default>true</default>
                    <label>NoTestRun</label>
                </value>
                <value>
                    <fullName>RunSpecifiedTests</fullName>
                </value>
                <value>
                    <fullName>RunLocalTests</fullName>
                </value>
                <value>
                    <fullName>RunAllTestsInOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Pull_Requests_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Requests Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__QR_Code__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=&apos;+
  SUBSTITUTE(LEFT($Api.Partner_Server_URL_310, 
    FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)
  )+Id, 
    &apos;https://&apos;, 
    &apos;https%3A%2F%2F&apos;
  ),
&apos;Scan the QR code to create contact in your mobile&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product version or release where this User Story will be released.</description>
        <inlineHelpText>Product version or release where this User Story will be released.</inlineHelpText>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sprint where the User Story is planned.</description>
        <inlineHelpText>Sprint where the User Story is planned.</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>copado__Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>Current status of the implementation of the User Story.</description>
        <inlineHelpText>Current status of the implementation of the User Story.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Backburner</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for testing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Stop_Indexing_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</description>
        <inlineHelpText>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</inlineHelpText>
        <label>Stop Indexing Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_Other__c</fullName>
        <label>Story Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_SFDC__c</fullName>
        <label>Story Points SFDC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team which will tackle the User Story.</description>
        <inlineHelpText>Team which will tackle the User Story.</inlineHelpText>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Test_Script_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Test Script Owner)</relationshipLabel>
        <relationshipName>User_Stories_TestScriptOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within one sprint.</description>
        <inlineHelpText>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within</inlineHelpText>
        <label>Theme</label>
        <referenceTo>copado__Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Story_Points__c</fullName>
        <formula>copado__Story_Points_SFDC__c+copado__Story_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <description>Number of triggers without the minimum required coverage.</description>
        <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	),
	&apos;feature/&apos; + Name
)</formula>
        <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>copado__Cli_Listview</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Cli Listview</label>
    </listViews>
</CustomObject>